--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -116,7 +116,7 @@
    insteadOf = gl:
 
 [user]
-	name = Naga Sanka
-	email = nsanka@me.com
+	name = Brian Johnson
+	email = pnwology@icloud.com
 [pull]
 	rebase = true
