--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -1,13 +1,15 @@
-tap "1password/tap"
-tap "heroku/brew"
-tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
-tap "homebrew/core"
+#tap '1password/tap'
+#tap 'heroku/brew'
+tap 'homebrew/bundle'
+tap 'homebrew/cask'
+tap 'homebrew/cask-fonts'
+tap 'homebrew/cask-versions'
+tap 'homebrew/core'
 
 #cask 'discord'
 cask 'docker'
+cask 'microsoft-office'
+cask 'notion'
 cask 'firefox'
 cask 'microsoft-edge'
 cask 'iterm2'
@@ -18,7 +20,7 @@ cask 'sourcetree'
 #cask 'teamviewer'
 cask 'visual-studio-code'
 #cask 'zoom'
-cask '1password'
+#cask '1password'
 cask 'disk-inventory-x'
 cask 'font-fira-code'
 cask 'font-fira-code-nerd-font'
@@ -33,22 +35,22 @@ brew 'wget'
 #brew 'azure-cli'
 #brew 'awscli'
 brew 'yarn'
-brew "xz"
-brew "bash-completion"
-brew "bat"
-brew "cmake"
-brew "fish"
-brew "git"
-brew "git-remote-codecommit"
-brew "gradle"
-brew "node"
-brew "openssl@3"
-brew "starship"
-brew "stow"
-brew "tmux"
-brew "tree"
-brew "vim"
-brew "zlib"
+brew 'xz'
+brew 'bash-completion'
+brew 'bat'
+brew 'cmake'
+brew 'fish'
+brew 'git'
+brew 'git-remote-codecommit'
+brew 'gradle'
+brew 'node'
+brew 'openssl@3'
+brew 'starship'
+brew 'stow'
+brew 'tmux'
+brew 'tree'
+brew 'vim'
+brew 'zlib'
 
 mas 'OneDrive', id: 823766827
 mas 'Xcode', id: 497799835
