vscode setting: menu location

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,34 +1,32 @@
 {
-   "telemetry.telemetryLevel": "off",
-   "aws.telemetry": false,
-   "workbench.colorTheme": "GitHub Dark Default",
-   "workbench.startupEditor": "none",
-   "workbench.iconTheme": "material-icon-theme",
-   "workbench.sideBar.location": "right",
-   "workbench.editor.tabActionCloseVisibility": false,
-   "workbench.editorAssociations": {
-      "*.ipynb": "jupyter.notebook.ipynb"
-   },
-   "editor.tabSize": 3,
-   "editor.minimap.enabled": false,
-   "editor.cursorBlinking": "expand",
-   "editor.cursorWidth": 4,
-   "editor.hover.delay": 1000,
-   "editor.formatOnSave": true,
-   "editor.wordWrap": "on",
-   "editor.fontSize": 14,
-   "debug.console.fontSize": 14,
-   "scm.inputFontSize": 14,
-   "terminal.integrated.fontSize": 14,
-   "chat.editor.fontSize": 14,
-   "explorer.autoReveal": false,
-   "files.trimFinalNewlines": true,
-   "files.trimTrailingWhitespace": true,
-   "python.languageServer": "Pylance",
-   "python.terminal.activateEnvironment": true,
-   "breadcrumbs.enabled": false,
-   "databricks.experiments.optInto": [
-      "notebooks.dbconnect"
-   ],
-   "git.autofetch": true
+  "telemetry.telemetryLevel": "off",
+  "aws.telemetry": false,
+  "workbench.colorTheme": "GitHub Dark Default",
+  "workbench.startupEditor": "none",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.editor.tabActionCloseVisibility": false,
+  "workbench.editorAssociations": {
+    "*.ipynb": "jupyter.notebook.ipynb"
+  },
+  "editor.tabSize": 3,
+  "editor.minimap.enabled": false,
+  "editor.cursorBlinking": "expand",
+  "editor.cursorWidth": 4,
+  "editor.hover.delay": 1000,
+  "editor.formatOnSave": true,
+  "editor.wordWrap": "on",
+  "editor.fontSize": 14,
+  "debug.console.fontSize": 14,
+  "scm.inputFontSize": 14,
+  "terminal.integrated.fontSize": 14,
+  "chat.editor.fontSize": 14,
+  "explorer.autoReveal": false,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "python.languageServer": "Pylance",
+  "python.terminal.activateEnvironment": true,
+  "breadcrumbs.enabled": false,
+  "databricks.experiments.optInto": ["notebooks.dbconnect"],
+  "git.autofetch": true,
+  "workbench.colorCustomizations": {}
 }
