--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -1,56 +1,178 @@
-#tap '1password/tap'
-#tap 'heroku/brew'
+
 tap 'homebrew/bundle'
 tap 'homebrew/cask'
 tap 'homebrew/cask-fonts'
 tap 'homebrew/cask-versions'
 tap 'homebrew/core'
 
-#cask 'discord'
-cask 'docker'
 cask 'microsoft-office'
 cask 'notion'
-cask 'firefox'
-cask 'microsoft-edge'
-cask 'iterm2'
-#cask 'jetbrains-toolbox'
-#cask 'miniconda'
-#cask 'slack'
-cask 'sourcetree'
-#cask 'teamviewer'
 cask 'visual-studio-code'
-#cask 'zoom'
-#cask '1password'
+cask 'ccleaner'
 cask 'disk-inventory-x'
+cask 'docker'
+cask 'drawio'
+cask 'firefox'
 cask 'font-fira-code'
 cask 'font-fira-code-nerd-font'
 cask 'imageoptim'
+cask 'iterm2'
+cask 'microsoft-auto-update'
+cask 'microsoft-edge'
+cask 'sourcetree'
 cask 'vlc'
 
-brew 'mas'
-brew 'nvm'
-brew 'gh'
-brew 'coreutils'
-brew 'wget'
-#brew 'azure-cli'
-#brew 'awscli'
-brew 'yarn'
-brew 'xz'
+
+brew 'aom'
+brew 'aribb24'
 brew 'bash-completion'
 brew 'bat'
+brew 'berkeley-db@5'
+brew 'brotli'
+brew 'c-ares'
+brew 'ca-certificates'
+brew 'cairo'
+brew 'cjson'
 brew 'cmake'
+brew 'coreutils'
+brew 'dav1d'
+brew 'diffutils'
+brew 'eza'
+brew 'fd'
+brew 'ffmpeg'
 brew 'fish'
+brew 'flac'
+brew 'fontconfig'
+brew 'freetype'
+brew 'frei0r'
+brew 'fribidi'
+brew 'fzf'
+brew 'gdbm'
+brew 'gettext'
+brew 'gh'
+brew 'giflib'
+brew 'gifsicle'
 brew 'git'
+brew 'git-delta'
 brew 'git-remote-codecommit'
+brew 'glib'
+brew 'gmp'
+brew 'gnutls'
 brew 'gradle'
+brew 'graphite2'
+brew 'grep'
+brew 'harfbuzz'
+brew 'highway'
+brew 'icu4c'
+brew 'imath'
+brew 'jpeg-turbo'
+brew 'jpeg-xl'
+brew 'jq'
+brew 'krb5'
+brew 'lame'
+brew 'leptonica'
+brew 'libarchive'
+brew 'libass'
+brew 'libb2'
+brew 'libbluray'
+brew 'libevent'
+brew 'libgit2'
+brew 'libidn2'
+brew 'libmicrohttpd'
+brew 'libnghttp2'
+brew 'libogg'
+brew 'libpng'
+brew 'librist'
+brew 'libsamplerate'
+brew 'libsndfile'
+brew 'libsodium'
+brew 'libsoxr'
+brew 'libssh'
+brew 'libssh2'
+brew 'libtasn1'
+brew 'libtiff'
+brew 'libunibreak'
+brew 'libunistring'
+brew 'libuv'
+brew 'libvidstab'
+brew 'libvmaf'
+brew 'libvorbis'
+brew 'libvpx'
+brew 'libx11'
+brew 'libxau'
+brew 'libxcb'
+brew 'libxdmcp'
+brew 'libxext'
+brew 'libxrender'
+brew 'libyaml'
+brew 'little-cms2'
+brew 'lua'
+brew 'lz4'
+brew 'lzo'
+brew 'mas'
+brew 'mbedtls'
+brew 'mpdecimal'
+brew 'mpg123'
+brew 'ncurses'
+brew 'nettle'
 brew 'node'
+brew 'nvm'
+brew 'oniguruma'
+brew 'opencore-amr'
+brew 'openexr'
+brew 'openjdk'
+brew 'openjpeg'
 brew 'openssl@3'
+brew 'opus'
+brew 'p11-kit'
+brew 'pango'
+brew 'pcre2'
+brew 'perl'
+brew 'pixman'
+brew 'pnpm'
+brew 'postgresql@14'
+brew 'python-dateutil'
+brew 'python-urllib3'
+brew 'python@3.12'
+brew 'rav1e'
+brew 'readline'
+brew 'ripgrep'
+brew 'rubberband'
+brew 'ruby'
+brew 'sdl2'
+brew 'six'
+brew 'snappy'
+brew 'speex'
+brew 'sqlite'
+brew 'srt'
 brew 'starship'
 brew 'stow'
+brew 'svt-av1'
+brew 'tesseract'
+brew 'theora'
 brew 'tmux'
 brew 'tree'
+brew 'unbound'
+brew 'utf8proc'
 brew 'vim'
+brew 'webp'
+brew 'wget'
+brew 'x264'
+brew 'x265'
+brew 'xorgproto'
+brew 'xvid'
+brew 'xz'
+brew 'yarn'
+brew 'zeromq'
+brew 'zimg'
 brew 'zlib'
+brew 'zstd'
 
 mas 'OneDrive', id: 823766827
 mas 'Xcode', id: 497799835
+mas 'GarageBand', id: 682658836
+mas 'iMovie', id: 408981434
+mas 'Xcode', id: 497799835
+mas 'Pages', id: 409201541
+mas 'Keynote', id: 409183694
+mas 'Numbers', id: 409203825
